# arbitrage-bot

./: .gitignore  LICENSE  README.md  config.sample.json5
contracts/: foundry.toml
contracts/src/arbitrage/: ArbitrageExecutor.sol
contracts/src/flashloans/: IAaveFlashLoanProvider.sol  IBalancerFlashLoanProvider.sol  IFlashLoanReceiver.sol
contracts/src/interfaces/: ICurvePool.sol  IERC20.sol  IUniswapV2Router02.sol  IUniswapV3Router.sol  IWETH.sol
contracts/src/libraries/: SafeERC20.sol
docs/: api.md  architecture.md  deployment.md
rust-core/: Cargo.toml
rust-core/benches/: arbitrage_benchmarks.rs
rust-core/src/: collectors.rs  common.rs  executors.rs  main.rs  orchestrator.rs  simulators.rs  strategies.rs
rust-core/src/collectors/: mempool.rs  mod.rs  onchain.rs  price.rs
rust-core/src/executors/: flashbots.rs  mod.rs  standard.rs
rust-core/src/simulators/: forked.rs  local.rs  mod.rs  tenderly.rs
rust-core/src/strategies/: cross_chain.rs  cross_exchange.rs  flash_loan.rs  mod.rs  triangular.rs
