[package]
name = "defi-arbitrage-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance DeFi arbitrage bot"
license = "MIT"

[dependencies]
# Ethereum interaction
ethers = { version = "2.0.4", features = ["ws", "rustls"] }
ethers-providers = "2.0.4"
ethers-signers = "2.0.4"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"

# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"

# Serialization/Deserialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
json5 = "0.4.1"

# Logging and tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# CLI
clap = { version = "4.3.0", features = ["derive"] }

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Utilities
async-trait = "0.1.68"
chrono = "0.4.24"
dotenv = "0.15.0"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
reqwest = { version = "0.11.18", features = ["json"] }
url = "2.3.1"
uuid = { version = "1.3.3", features = ["v4"] }

# Metrics
metrics = "0.21.0"
metrics-exporter-prometheus = "0.12.1"

# Mempool monitoring
web3 = "0.19.0"

# Flash loan simulation
revm = "3.3.0"

[dev-dependencies]
mockall = "0.11.4"
test-log = "0.2.11"
tokio-test = "0.4.2"

[build-dependencies]
ethers-contract-abigen = "2.0.4"

[features]
default = []
simulation = []
flashbots = []
tenderly = []

[[bin]]
name = "defi-arbitrage-bot"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
